# RepoSense

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AI_GROUNDED_PRINCIPLES.md  ARCHITECTURE.md  CONTEXT_PACK.md  CROSS_LANGUAGE_CONTEXT_PACK.md  DEMO_QUICKSTART.md  EVENT_MODEL.md  FACTS_PATTERNS_INSIGHTS.md  INDEX.md  LANGUAGE_ADAPTERS.md  LANGUAGE_SUPPORT_MATRIX.md  LEARN_OVERVIEW.md  OSS_PREP.md  OUTPUTS_MAP.md  RELEASE.md  RELEASE_CHECKLIST.md  TESTING_AND_GATES.md  artifacts-five-pack.md  ci-baseline-gate.md  what-is-reposense.md
presets/: default.json  demo.json  prod_deep.json  prod_lite.json
reposense/: __main__.py  api_surface.py  arch_verify.py  arch_views.py  baseline.py  cases_check.py  ci.py  cli.py  context_brief.py  context_diff.py  context_pack.py  cross_language.py  detectors.py  diff.py  entrypoints.py  explain.py  gate.py  graph_builder.py  importers.py  language_capabilities.py  openapi.py  packager.py  patch_exports.py  profiles.py  quality_gate.py  query.py  redact.py  report.py  rules.py  rules_qa.py  run_manifest.py  run_upgrade.py  sarif.py  scan.py  scanner.py  selfcheck.py  specs.py  sqlite_store.py  utils.py  verifier.py  (+1 more)
schemas/: pattern.schema.json
scripts/: concept_graph_demo.json  demo_run.ps1  demo_run.sh
sql/: schema_v1.sql
tests/: _tmpdir.py  test_adapter_registry.py  test_api_runs_includes_regressions_summary.py  test_api_surface_build_smoke.py  test_api_surface_deterministic_order.py  (+156 more)
(+386 files in other folders)
